force-app/main/default/objects/Case_Product__c/fields/SS_Age_of_Product__c.field-meta.xml
<CustomField>
    <fullName>SS_Age_of_Product__c</fullName>
    <description>Scott Safety field - How long has the customer had this product?</description>
    <inlineHelpText>How long has the customer had this product?</inlineHelpText>
    <label>SS-Age of Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OBF- 30 Days</fullName>
            </value>
            <value>
                <fullName>1 - 30 Days</fullName>
            </value>
            <value>
                <fullName>31 - 60 Days</fullName>
            </value>
            <value>
                <fullName>61 - 90 Days</fullName>
            </value>
            <value>
                <fullName>91 - 180 Days</fullName>
            </value>
            <value>
                <fullName>181 - 1 yrs</fullName>
            </value>
            <value>
                <fullName>1 - 2 yrs</fullName>
            </value>
            <value>
                <fullName>> 2 yrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>