force-app/main/default/objects/Case_Product__c/fields/SS_Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>SS_Case_Reason__c</fullName>
    <description>Scott Safety field - What is the reason for the Case?</description>
    <inlineHelpText>What is the reason for the Case?</inlineHelpText>
    <label>SS-Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing/Pricing Errors</fullName>
            </value>
            <value>
                <fullName>Order/Booking Errors</fullName>
            </value>
            <value>
                <fullName>Product Quality</fullName>
            </value>
            <value>
                <fullName>Shipments</fullName>
            </value>
            <value>
                <fullName>Customer Feedback</fullName>
            </value>
            <value>
                <fullName>Tech Support – Information Error</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>