force-app/main/default/objects/Case_Product__c/fields/SS_Defect__c.field-meta.xml
<CustomField>
    <fullName>SS_Defect__c</fullName>
    <description>Scott Safety field - What is the Defect related to this RMA line?</description>
    <inlineHelpText>What is the Defect related to this RMA line?</inlineHelpText>
    <label>SS-Defect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASSEMBLY/SERVICE</fullName>
            </value>
            <value>
                <fullName>CONTAMINATION</fullName>
            </value>
            <value>
                <fullName>CUSTOMER ISSUES</fullName>
            </value>
            <value>
                <fullName>DAMAGE</fullName>
            </value>
            <value>
                <fullName>DOCUMENT/PACKAGING</fullName>
            </value>
            <value>
                <fullName>ELECTRICAL/CHARGING</fullName>
            </value>
            <value>
                <fullName>FAILURE</fullName>
            </value>
            <value>
                <fullName>FILTERS</fullName>
            </value>
            <value>
                <fullName>METALS/COMPOSITES</fullName>
            </value>
            <value>
                <fullName>PLASTICS/PAINT</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>