force-app/main/default/objects/Case_Product__c/fields/SS_Defect_Code__c.field-meta.xml
<CustomField>
    <fullName>SS_Defect_Code__c</fullName>
    <description>Scott Safety field - Enter the defect code for this RMA line</description>
    <inlineHelpText>Enter the defect code for this RMA line</inlineHelpText>
    <label>SS-Defect Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SS_Defect__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1010 Excessive impact</fullName>
            </value>
            <value>
                <fullName>1011 Ripped/torn/stripped</fullName>
            </value>
            <value>
                <fullName>1012 Shrink/stretch/distort</fullName>
            </value>
            <value>
                <fullName>1013 Bent/warped/twisted</fullName>
            </value>
            <value>
                <fullName>1014 Scored/scratched/cut</fullName>
            </value>
            <value>
                <fullName>1015 Puncture/perforated</fullName>
            </value>
            <value>
                <fullName>1016 Broken wire/connector</fullName>
            </value>
            <value>
                <fullName>1017 Overheating/melting</fullName>
            </value>
            <value>
                <fullName>1018 Bubbling/crazing</fullName>
            </value>
            <value>
                <fullName>1019 Cracked/shattered</fullName>
            </value>
            <value>
                <fullName>1020 Crush</fullName>
            </value>
            <value>
                <fullName>1021 Worn</fullName>
            </value>
            <value>
                <fullName>1022 Optical distortion</fullName>
            </value>
            <value>
                <fullName>1023 Split</fullName>
            </value>
            <value>
                <fullName>1024 Discoloured</fullName>
            </value>
            <value>
                <fullName>1025 Colour miss-match</fullName>
            </value>
            <value>
                <fullName>1026 Incorrect reading</fullName>
            </value>
            <value>
                <fullName>1027 Pressure rupture</fullName>
            </value>
            <value>
                <fullName>1028 Contamination</fullName>
            </value>
            <value>
                <fullName>1510 Intermittent operation</fullName>
            </value>
            <value>
                <fullName>1511 No Reading</fullName>
            </value>
            <value>
                <fullName>1512 Reading not level</fullName>
            </value>
            <value>
                <fullName>1513 Incorrect gauge reading</fullName>
            </value>
            <value>
                <fullName>1514 Fluctuating reading</fullName>
            </value>
            <value>
                <fullName>1515 Crimp failure</fullName>
            </value>
            <value>
                <fullName>1516 O ring/seal failure</fullName>
            </value>
            <value>
                <fullName>1517 Glue/epoxy mechanical fail</fullName>
            </value>
            <value>
                <fullName>1518 End of service life</fullName>
            </value>
            <value>
                <fullName>1519 Button Inoperable</fullName>
            </value>
            <value>
                <fullName>1520 Surface Flaking/lifting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>