force-app/main/default/objects/Case_Product__c/fields/SS_Legacy_Customer_1st_Case__c.field-meta.xml
<CustomField>
    <fullName>SS_Legacy_Customer_1st_Case__c</fullName>
    <description>Scott Safety field - Legacy case number</description>
    <label>SS-Legacy Customer 1st Case</label>
    <length>25</length>
    <type>Text</type>
</CustomField>