force-app/main/default/objects/Case_Product__c/fields/SS_LineStatus__c.field-meta.xml
<CustomField>
    <fullName>SS_LineStatus__c</fullName>
    <description>Scott Safety field - What is the status of this RMA line?</description>
    <inlineHelpText>What is the status of this RMA line?</inlineHelpText>
    <label>SS-LineStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Investigation</fullName>
            </value>
            <value>
                <fullName>Under Investigation</fullName>
            </value>
            <value>
                <fullName>Complaint Escalated</fullName>
            </value>
            <value>
                <fullName>Investigation Completed</fullName>
            </value>
            <value>
                <fullName>CPAR Created</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Auto-Close</fullName>
            </value>
            <value>
                <fullName>Awaiting Goods</fullName>
            </value>
            <value>
                <fullName>Waiting For Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>