force-app/main/default/objects/Case_Product__c/fields/SS_OrderNo__c.field-meta.xml
<CustomField>
    <fullName>SS_OrderNo__c</fullName>
    <description>Scott Safety field - What order number is this related to?</description>
    <inlineHelpText>What order number is this related to?</inlineHelpText>
    <label>SS-OrderNo</label>
    <length>10</length>
    <type>Text</type>
</CustomField>