force-app/main/default/objects/Case_Product__c/fields/SS_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>SS_Product_Family__c</fullName>
    <description>Scott Safety field used for RMA line item. What is the product family?</description>
    <inlineHelpText>What is the product family?</inlineHelpText>
    <label>SS-Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cameras</fullName>
            </value>
            <value>
                <fullName>Compressors</fullName>
            </value>
            <value>
                <fullName>Fixed Instruments</fullName>
            </value>
            <value>
                <fullName>Locators/Tracking</fullName>
            </value>
            <value>
                <fullName>Mask Or Filters</fullName>
            </value>
            <value>
                <fullName>Misc. Parts</fullName>
            </value>
            <value>
                <fullName>Portable Instruments</fullName>
            </value>
            <value>
                <fullName>SCBA</fullName>
            </value>
            <value>
                <fullName>SEM's/Pass Console</fullName>
            </value>
            <value>
                <fullName>Service Parts</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Accountability</fullName>
            </value>
            <value>
                <fullName>PPE</fullName>
            </value>
            <value>
                <fullName>PAPR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>