force-app/main/default/objects/Case_Product__c/fields/SS_RMA_Reason__c.field-meta.xml
<CustomField>
    <fullName>SS_RMA_Reason__c</fullName>
    <description>Scott Safety field - What is the purpose for the RMA?</description>
    <inlineHelpText>What is the purpose for the RMA?</inlineHelpText>
    <label>SS-RMA Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SS_Case_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Freight Billing Issue</fullName>
            </value>
            <value>
                <fullName>Order Credit/Billing Issue</fullName>
            </value>
            <value>
                <fullName>Packing Slip Billing Error</fullName>
            </value>
            <value>
                <fullName>Pricing - Billing Error</fullName>
            </value>
            <value>
                <fullName>Sales Tax Billing Error</fullName>
            </value>
            <value>
                <fullName>Order Configurator Issue</fullName>
            </value>
            <value>
                <fullName>Order Customer Error</fullName>
            </value>
            <value>
                <fullName>Order Catalog/Internet Error</fullName>
            </value>
            <value>
                <fullName>Order Entry (PO# Issue)</fullName>
            </value>
            <value>
                <fullName>Order Entry (Qty Issue)</fullName>
            </value>
            <value>
                <fullName>Order Entry (Scott Error)</fullName>
            </value>
            <value>
                <fullName>Unit of Measure (Review)</fullName>
            </value>
            <value>
                <fullName>CSR Order Entry Error</fullName>
            </value>
            <value>
                <fullName>They Don't Call Me Back</fullName>
            </value>
            <value>
                <fullName>Catalog/Internet Difficult</fullName>
            </value>
            <value>
                <fullName>Phone &amp; Vmail Tree Difficult</fullName>
            </value>
            <value>
                <fullName>On Hold Too Long</fullName>
            </value>
            <value>
                <fullName>Poor Turnaround</fullName>
            </value>
            <value>
                <fullName>Literature/Mailer Complaint</fullName>
            </value>
            <value>
                <fullName>Scott Employee Training</fullName>
            </value>
            <value>
                <fullName>Employee Discourteous</fullName>
            </value>
            <value>
                <fullName>Distributor Complaint</fullName>
            </value>
            <value>
                <fullName>Demo Return</fullName>
            </value>
            <value>
                <fullName>Goodwill/Customer Convenience</fullName>
            </value>
            <value>
                <fullName>Wrong Parts on Product</fullName>
            </value>
            <value>
                <fullName>Missing Parts on Product</fullName>
            </value>
            <value>
                <fullName>Out-Dated Product</fullName>
            </value>
            <value>
                <fullName>Faulty Part or Product</fullName>
            </value>
            <value>
                <fullName>Misconfigured Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>