force-app/main/default/objects/Case_Product__c/fields/SS_Serial__c.field-meta.xml
<CustomField>
    <fullName>SS_Serial__c</fullName>
    <description>Scott Safety field - What is the serial # related to this RMA?</description>
    <inlineHelpText>What is the serial # related to this RMA?</inlineHelpText>
    <label>SS-Serial#</label>
    <length>35</length>
    <type>Text</type>
</CustomField>