force-app/main/default/objects/Case_Product__c/fields/SS_ShipmentNo__c.field-meta.xml
<CustomField>
    <fullName>SS_ShipmentNo__c</fullName>
    <description>Scott Safety field - What shipment number is this related to?</description>
    <inlineHelpText>What shipment number is this related to?</inlineHelpText>
    <label>SS-ShipmentNo</label>
    <length>20</length>
    <type>Text</type>
</CustomField>