force-app/main/default/objects/Case_Product__c/fields/SS_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>SS_Total_Price__c</fullName>
    <description>Scott Safety field - What is the total price (qty*Price) for this RMA line?</description>
    <formula>Quantity__c  *  Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>What is the total price (qty*Price) for this RMA line?</inlineHelpText>
    <label>SS-Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>