force-app/main/default/objects/Case_Product__c/fields/Sub_Product__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product__c</fullName>
    <label>Sub Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>