force-app/main/default/objects/Case_Product__c/fields/Tender_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>Tender_Product_Status__c</fullName>
    <inlineHelpText>To be completed after the final result of the tender is received. If lost, please add competitive product information below</inlineHelpText>
    <label>Tender Product Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>