force-app/main/default/objects/Case_Product__c/fields/Total_Sample_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sample_Price__c</fullName>
    <formula>( Per_Unit_Price__c * Quantity__c )+ Shipping_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Sample Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>