force-app/main/default/objects/Case_Product__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <description>Tracking Number associated with each Fulfillment Product</description>
    <label>Tracking Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>