force-app/main/default/objects/Case_Product__c/fields/Unit_of_Measure_2__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure_2__c</fullName>
    <label>Unit of Measure 2</label>
    <length>25</length>
    <type>Text</type>
</CustomField>