force-app/main/default/objects/Case_Product__c/fields/Unlisted_Products__c.field-meta.xml
<CustomField>
    <fullName>Unlisted_Products__c</fullName>
    <label>Unlisted Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>