force-app/main/default/objects/Case_Product__c/fields/UPC__c.field-meta.xml
<CustomField>
    <fullName>UPC__c</fullName>
    <label>UPC#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>