force-app/main/default/objects/Case_Product__c/recordTypes/Add_New_Material.recordType-meta.xml
<RecordType>
    <fullName>Add_New_Material</fullName>
    <active>true</active>
    <description>For adding unlisted materials on the Sales Org Extension for new materials case record type</description>
    <label>Add New Material</label>
</RecordType>