force-app/main/default/objects/Case_Product__c/recordTypes/CFM_Unlisted_Case_Product.recordType-meta.xml
<RecordType>
    <fullName>CFM_Unlisted_Case_Product</fullName>
    <active>true</active>
    <description>Use for CFM BSO case</description>
    <label>CFM Unlisted Case Product</label>
</RecordType>