force-app/main/default/objects/Case_Product__c/recordTypes/Customer_Incentive.recordType-meta.xml
<RecordType>
    <fullName>Customer_Incentive</fullName>
    <active>true</active>
    <description>Use for Customer Incentive Products</description>
    <label>Customer Incentive</label>
</RecordType>