force-app/main/default/objects/Case_Product__c/recordTypes/Deviated_Price_Listed_Case_Product.recordType-meta.xml
<RecordType>
    <fullName>Deviated_Price_Listed_Case_Product</fullName>
    <active>true</active>
    <description>Case product record type for deviated price bso case</description>
    <label>Deviated Price Listed Case Product</label>
</RecordType>