force-app/main/default/objects/Case_Product__c/recordTypes/OOPA_Listed_Case_Product.recordType-meta.xml
<RecordType>
    <fullName>OOPA_Listed_Case_Product</fullName>
    <active>true</active>
    <description>User for BSO OOPA case</description>
    <label>OOPA Listed Case Product</label>
</RecordType>