force-app/main/default/objects/Case_Product__c/recordTypes/Pricing_Request.recordType-meta.xml
<RecordType>
    <fullName>Pricing_Request</fullName>
    <active>true</active>
    <description>This Record Type will be used to organize Pricing Request fields</description>
    <label>Pricing Request</label>
</RecordType>