force-app/main/default/objects/Case_Product__c/recordTypes/Unlisted_Product_Layout.recordType-meta.xml
<RecordType>
    <fullName>Unlisted_Product_Layout</fullName>
    <active>true</active>
    <description>Unlisted Product Layout</description>
    <label>Unlisted Product</label>
</RecordType>