force-app/main/default/objects/Case_Product__c/validationRules/CP_VR002_Requested_End_User_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_VR002_Requested_End_User_Price</fullName>
    <active>true</active>
    <description>Required - if Channel Partner/End User Type equals End User Only</description>
    <errorConditionFormula>AND( 
Case__r.RecordType.DeveloperName = 'Deviated_Pricing',
TEXT(Case__r.Channel_End_User_Type__c) = 'End User Only' ,    ISBLANK(Requested_End_User_Price__c) )</errorConditionFormula>
    <errorDisplayField>Requested_End_User_Price__c</errorDisplayField>
    <errorMessage>Requested End User Price is Required - if Channel Partner/End User Type equals End User Only</errorMessage>
</ValidationRule>