force-app/main/default/objects/Case_Product__c/validationRules/CP_VR003_Requested_Distributor_Price.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_VR003_Requested_Distributor_Price</fullName>
    <active>true</active>
    <description>Required - if Channel Partner/End User Type equals Channel Partner/Distributor Only</description>
    <errorConditionFormula>AND( 
Case__r.RecordType.DeveloperName = 'Deviated_Pricing', 
TEXT(Case__r.Channel_End_User_Type__c) = 'Channel Partner/Distributor Only' , ISBLANK( Requested_Distributor_Price__c ) )</errorConditionFormula>
    <errorDisplayField>Requested_Distributor_Price__c</errorDisplayField>
    <errorMessage>Requested Distributor Price is Required - if Channel Partner/End User Type equals Channel Partner/Distributor Only</errorMessage>
</ValidationRule>