force-app/main/default/objects/Case_Product__c/validationRules/CP_VR005_DeviatedPrice_Price_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_VR005_DeviatedPrice_Price_Required</fullName>
    <active>true</active>
    <description>Requested Distributor Price,  Requested End User Price are required for Devited Pricing Rquested.</description>
    <errorConditionFormula>AND(
    Case__r.RecordType.DeveloperName =='Deviated_Pricing',
    ISNULL(Requested_Distributor_Price__c),
    ISNULL(Requested_End_User_Price__c)
)</errorConditionFormula>
    <errorMessage>You need to input value for any following field: Requested Distributor Price,  Requested End User Price</errorMessage>
</ValidationRule>