force-app/main/default/objects/Case_Product__c/validationRules/CP_VR009_Quantity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_VR009_Quantity_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (   Case__r.Case_Record_Type_Name__c = "BSO_Sample_Assistance",
OR(
ISNULL(Quantity__c), ISBLANK(Quantity__c) 
)
)</errorConditionFormula>
    <errorMessage>'Quantity' is required. Please enter a 'Quantity' to Continue.</errorMessage>
</ValidationRule>