force-app/main/default/objects/Case_Product__c/validationRules/CP_VR011_Phase_in_or_out_equals_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>CP_VR011_Phase_in_or_out_equals_Yes</fullName>
    <active>true</active>
    <description>If field "Is this a Phase In/Phase Out?" = Yes, then these fields are required.</description>
    <errorConditionFormula>AND(ISPICKVAL(Is_this_a_Phase_In_Phase_Out__c, "Yes"), OR(ISBLANK(SAP_10_Digit_Phase_Out_SKU__c ), ISBLANK(Legacy_11_Digit_Phase_Out_SKU__c)))</errorConditionFormula>
    <errorMessage>Both SAP 10-Digit Phase Out 3M ID# and Legacy 11-Digit Phase Out 3M ID# fields are required for a Phase In/Phase Out</errorMessage>
</ValidationRule>