force-app/main/default/objects/Case_Product__c/validationRules/Fulfillment_Products_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Fulfillment_Products_Available</fullName>
    <active>true</active>
    <description>Validation Rule ensuring that when choosing a Product for Fulfillment that the Product is actually available for Fulfillment</description>
    <errorConditionFormula>AND(RecordType.Name = "Pricing Request",
    Product__r.Available_for_PAS_Fulfillment__c = FALSE,
    ForFullfillment__c = TRUE
    )</errorConditionFormula>
    <errorDisplayField>ForFullfillment__c</errorDisplayField>
    <errorMessage>This product is not available for fulfillment. Please select a different Product.</errorMessage>
</ValidationRule>