force-app/main/default/objects/Case_Product__c/validationRules/Problem_Products_Not_For_Fulfillment.validationRule-meta.xml
<ValidationRule>
    <fullName>Problem_Products_Not_For_Fulfillment</fullName>
    <active>false</active>
    <description>Validation Rule to ensure that Problem Products are not sent off for fulfillment</description>
    <errorConditionFormula>AND ( 
RecordType.Name = "Pricing Request",
NOT ( 
ISPICKVAL ( Reason_Codes__c, "None" )
),
ForFullfillment__c = TRUE
)</errorConditionFormula>
    <errorDisplayField>ForFullfillment__c</errorDisplayField>
    <errorMessage>Problem Products cannot be sent for fulfillment.</errorMessage>
</ValidationRule>